UOM power alignment issue fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -2507,7 +2507,7 @@ button:disabled {
 
 //=============== costing details page only
 .react-datepicker-popper {
-  z-index: 9;
+  z-index: 21;
 }
 
 .costing-details-page {
@@ -8454,9 +8454,11 @@ padding-bottom: 3px;
 .st-operation .before-box {
   padding-left: 0;
 }
-.form-group.inputbox.withBorder, .dropdown-flex {
-  label {
-    display: flex;
+.UOM-label-container {
+  .form-group.inputbox.withBorder, .dropdown-flex {
+    label {
+      display: flex;
+    }
   }
 }
 .inputbox, .ag-react-container {
